# WBSPEED

./: README.md  pyvenv.cfg
Scripts/: activate  activate.bat
frontend/: package-lock.json  package.json  vite.config.js
frontend/convex/: http.js  messages.js  schema.js
frontend/convex/_generated/: api.d.ts
frontend/convex/functions/messages/: add.js  list.js
frontend/src/: App.jsx  main.jsx  wasmApi.js  wasmClient.js
wasm_connector/: Cargo.toml
wasm_connector/src/: lib.rs
webperfomance/: db.sqlite3  manage.py
webperfomance/api/: models.py  serializers.py  urls.py  views.py
webperfomance/api/migrations/: 0001_initial.py
webperfomance/webperfomance/: asgi.py  convex_client.py  settings.py  urls.py  wsgi.py
