[package]
name = "wasm_connector"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys          = "0.3"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
base64          = "0.21"
sha2            = "0.10"
hmac            = "0.12"
hex             = "0.4"
getrandom       = { version = "0.2", features = ["js"] }

[profile.release]
opt-level     = "z"   # minimize binary size
lto           = true
codegen-units = 1
panic         = "abort"
